# Terms-and-Conditions-bot

./: .env.backup  .gitignore  AA_bright_data_scraper.md  AA_tavily_scraper.md  LAUNCH  README.md  Tavily deepdive.txt  analyze_all_terms.py  analyze_terms.py  auto_archive_invalid.py  bright_bulk_scraper.py  bright_scrape_test.py  bright_scraping_report_20250705_150738.txt  bright_small_test.py  compare_scrapers.py  conservative_scraper.py  create-env.js  dev_plan.md  devplan.md  get_tiktok_terms.py  intent_spec.md  launch.py  launch.sh  pyproject.toml  quick_bright_test.py  requirements.txt  rescrape_list_20250705_173258.txt  restoration_summary_20250705_174138.txt  restore_legitimate_terms.py  scrape_terms.py  start-tavily-mcp.js  start-tavily.sh  terms_analysis_start.md  terms_and_conditions.md  terms_validation_report_20250705_173201.json  test-env.js  test_analysis.py  test_connection.html  test_deep_analysis.py  test_improved_scraping.py  (+4 more)
.claude/: settings.local.json
archive/: README.md
archived_invalid_terms/: bright_data.md
bright_docs/: browser_api_overview.md  python_examples.md
bright_storage/: airbnb.md  android_accessibility_suite.md  android_system_webview.md  bumble.md  files_by_google.md  google_calendar.md  google_chrome.md  google_docs.md  google_drive.md  google_keep.md  google_maps.md  google_maps_go.md  google_messages.md  google_pay.md  google_photos.md  google_slides.md  google_translate.md  google_tv.md  instagram.md  lyft.md  netflix.md  peacock_tv.md  pubg_mobile.md  snapchat.md  spotify.md  x.md  youtube.md  zoom.md
scripts/: init_db.py  (+1 more)
(+328 files in other folders)
